--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>this is the home page</h1>
-
+<div class="jumbotron">
+	<h1><i class="fa fa-circle-o-notch"></i> Stukdo</h1>
+	<p>This is my smart to do list rubyrails app</p>
+	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+</div>
