added validations and autohtml

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,15 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-4"><h1 class="text-center">To Do</h1>
+    <%= render @to_do %>
+  </div>
+  <div class="col-md-4"><h1 class="text-center">Doing</h1>
+    <%= render @doing %>
+  </div>
+  <div class="col-md-4"><h1 class="text-center">Done</h1>
+    <%= render @done %>
+  </div>
 
-<h1>Listing Tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.content %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
 
 <br>
-
 <%= link_to 'New Task', new_task_path %>
